plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

group = 'com.steamscraper'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.xerial:sqlite-jdbc:3.45.1.0' 
    
    // --- APACHE SPARK ---
    implementation 'org.apache.spark:spark-core_2.13:3.5.0'
    implementation 'org.apache.spark:spark-sql_2.13:3.5.0'
    implementation 'org.apache.hadoop:hadoop-client:3.3.4' 
}

application {
    mainClass = 'SteamScraper'
}

// --- TAREA PARA EJECUTAR EL COLLECTOR (SQLITE) ---
tasks.register('runCollector', JavaExec) {
    group = "Application"
    description = "Ejecuta el SteamRawCollector con soporte SQLite"
    classpath = sourceSets.main.runtimeClasspath
    mainClass.set('SteamRawCollector')
}
// -------------------------------------------------

tasks.register('runJsonToParquet', JavaExec) {
    group = "Application"
    description = "Runs the JsonToParquet class with correct JVM args for Java 17+"
    classpath = sourceSets.main.runtimeClasspath
    mainClass.set('JsonToParquet')
    jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', "-Djava.library.path=${project.projectDir}/bin"
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
